# kafka-postgres-transform

./: .gitignore  Cargo.toml  Readme.md  flake.nix
.github/workflows/: cd.yml
js-plugin/: transform.js
src/: aimd_stream.rs  config.rs  deno.rs  file.rs  kafka.rs  lib.rs  main.rs  postgres.rs  protobuf.rs  wasm.rs
tests/: deno_batch_transform_test.rs  deno_message_key_test.rs  deno_transform_test.rs  file_processing_test.rs  mock_deno.rs  mock_deno_test.rs  wasm_transform_test.rs
wasm-plugin/: Cargo.toml
wasm-plugin/src/: lib.rs
