[package]
name = "kafka-postgres-transform"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.37", features = ["ssl-vendored", "cmake-build"] }
schema_registry_converter = { version = "4.0.0", features = ["proto_raw"] }
prost = "0.13"
prost-reflect = "0.15"
prost-types = "0.13"
deno_core = "0.344.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
zstd = "0.13.3"
tempfile = "3.8"
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
deno_console = "0.204.0"
